refractor: simplify the api for code generation
