# w7/code/openapi_server/controllers/security_controller.py
@@ -1,17 +1,15 @@
 from typing import List
 
 
-def info_from_bearerAuth(api_key, required_scopes):
+def info_from_bearerAuth(token):
     """
-    Check and retrieve authentication information from api_key.
+    Check and retrieve authentication information from custom bearer token.
     Returned value will be passed in 'token_info' parameter of your operation function, if there is one.
     'sub' or 'uid' will be set in 'user' parameter of your operation function, if there is one.
 
-    :param api_key API key provided by Authorization header
-    :type api_key: str
-    :param required_scopes Always None. Used for other authentication method
-    :type required_scopes: None
-    :return: Information attached to provided api_key or None if api_key is invalid or does not allow access to called API
+    :param token Token provided by Authorization header
+    :type token: str
+    :return: Decoded token information or None if token is invalid
     :rtype: dict | None
     """
     return {'uid': 'user_id'}
