# w7/code/openapi_server/models/borrowing_request.py
@@ -1,63 +1,0 @@
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from openapi_server.models.base_model import Model
-from openapi_server import util
-
-
-class BorrowingRequest(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, book_id=None):  # noqa: E501
-        """BorrowingRequest - a model defined in OpenAPI
-
-        :param book_id: The book_id of this BorrowingRequest.  # noqa: E501
-        :type book_id: str
-        """
-        self.openapi_types = {
-            'book_id': str
-        }
-
-        self.attribute_map = {
-            'book_id': 'book_id'
-        }
-
-        self._book_id = book_id
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'BorrowingRequest':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The BorrowingRequest of this BorrowingRequest.  # noqa: E501
-        :rtype: BorrowingRequest
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def book_id(self) -> str:
-        """Gets the book_id of this BorrowingRequest.
-
-
-        :return: The book_id of this BorrowingRequest.
-        :rtype: str
-        """
-        return self._book_id
-
-    @book_id.setter
-    def book_id(self, book_id: str):
-        """Sets the book_id of this BorrowingRequest.
-
-
-        :param book_id: The book_id of this BorrowingRequest.
-        :type book_id: str
-        """
-        if book_id is None:
-            raise ValueError("Invalid value for `book_id`, must not be `None`")  # noqa: E501
-
-        self._book_id = book_id
