# w7/code/openapi_server/models/login_request.py
@@ -6,18 +6,18 @@ from openapi_server.models.base_model import Model
 from openapi_server import util
 
 
-class Login(Model):
+class LoginRequest(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
-    def __init__(self, username='admin', password='123456'):  # noqa: E501
-        """Login - a model defined in OpenAPI
+    def __init__(self, username=None, password=None):  # noqa: E501
+        """LoginRequest - a model defined in OpenAPI
 
-        :param username: The username of this Login.  # noqa: E501
+        :param username: The username of this LoginRequest.  # noqa: E501
         :type username: str
-        :param password: The password of this Login.  # noqa: E501
+        :param password: The password of this LoginRequest.  # noqa: E501
         :type password: str
         """
         self.openapi_types = {
@@ -34,32 +34,32 @@ class Login(Model):
         self._password = password
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Login':
+    def from_dict(cls, dikt) -> 'LoginRequest':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The Login of this Login.  # noqa: E501
-        :rtype: Login
+        :return: The LoginRequest of this LoginRequest.  # noqa: E501
+        :rtype: LoginRequest
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def username(self) -> str:
-        """Gets the username of this Login.
+        """Gets the username of this LoginRequest.
 
 
-        :return: The username of this Login.
+        :return: The username of this LoginRequest.
         :rtype: str
         """
         return self._username
 
     @username.setter
     def username(self, username: str):
-        """Sets the username of this Login.
+        """Sets the username of this LoginRequest.
 
 
-        :param username: The username of this Login.
+        :param username: The username of this LoginRequest.
         :type username: str
         """
         if username is None:
@@ -69,20 +69,20 @@ class Login(Model):
 
     @property
     def password(self) -> str:
-        """Gets the password of this Login.
+        """Gets the password of this LoginRequest.
 
 
-        :return: The password of this Login.
+        :return: The password of this LoginRequest.
         :rtype: str
         """
         return self._password
 
     @password.setter
     def password(self, password: str):
-        """Sets the password of this Login.
+        """Sets the password of this LoginRequest.
 
 
-        :param password: The password of this Login.
+        :param password: The password of this LoginRequest.
         :type password: str
         """
         if password is None:
