# w7/code/openapi_server/models/login_response.py
@@ -1,0 +1,87 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class LoginResponse(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, access_token=None, refresh_token=None):  # noqa: E501
+        """LoginResponse - a model defined in OpenAPI
+
+        :param access_token: The access_token of this LoginResponse.  # noqa: E501
+        :type access_token: str
+        :param refresh_token: The refresh_token of this LoginResponse.  # noqa: E501
+        :type refresh_token: str
+        """
+        self.openapi_types = {
+            'access_token': str,
+            'refresh_token': str
+        }
+
+        self.attribute_map = {
+            'access_token': 'access_token',
+            'refresh_token': 'refresh_token'
+        }
+
+        self._access_token = access_token
+        self._refresh_token = refresh_token
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'LoginResponse':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The LoginResponse of this LoginResponse.  # noqa: E501
+        :rtype: LoginResponse
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def access_token(self) -> str:
+        """Gets the access_token of this LoginResponse.
+
+
+        :return: The access_token of this LoginResponse.
+        :rtype: str
+        """
+        return self._access_token
+
+    @access_token.setter
+    def access_token(self, access_token: str):
+        """Sets the access_token of this LoginResponse.
+
+
+        :param access_token: The access_token of this LoginResponse.
+        :type access_token: str
+        """
+
+        self._access_token = access_token
+
+    @property
+    def refresh_token(self) -> str:
+        """Gets the refresh_token of this LoginResponse.
+
+
+        :return: The refresh_token of this LoginResponse.
+        :rtype: str
+        """
+        return self._refresh_token
+
+    @refresh_token.setter
+    def refresh_token(self, refresh_token: str):
+        """Sets the refresh_token of this LoginResponse.
+
+
+        :param refresh_token: The refresh_token of this LoginResponse.
+        :type refresh_token: str
+        """
+
+        self._refresh_token = refresh_token
