# w7/code/openapi_server/models/register.py
@@ -1,145 +1,0 @@
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from openapi_server.models.base_model import Model
-from openapi_server import util
-
-
-class Register(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, username=None, password=None, name=None, role=None):  # noqa: E501
-        """Register - a model defined in OpenAPI
-
-        :param username: The username of this Register.  # noqa: E501
-        :type username: str
-        :param password: The password of this Register.  # noqa: E501
-        :type password: str
-        :param name: The name of this Register.  # noqa: E501
-        :type name: str
-        :param role: The role of this Register.  # noqa: E501
-        :type role: str
-        """
-        self.openapi_types = {
-            'username': str,
-            'password': str,
-            'name': str,
-            'role': str
-        }
-
-        self.attribute_map = {
-            'username': 'username',
-            'password': 'password',
-            'name': 'name',
-            'role': 'role'
-        }
-
-        self._username = username
-        self._password = password
-        self._name = name
-        self._role = role
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'Register':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The Register of this Register.  # noqa: E501
-        :rtype: Register
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def username(self) -> str:
-        """Gets the username of this Register.
-
-
-        :return: The username of this Register.
-        :rtype: str
-        """
-        return self._username
-
-    @username.setter
-    def username(self, username: str):
-        """Sets the username of this Register.
-
-
-        :param username: The username of this Register.
-        :type username: str
-        """
-        if username is None:
-            raise ValueError("Invalid value for `username`, must not be `None`")  # noqa: E501
-
-        self._username = username
-
-    @property
-    def password(self) -> str:
-        """Gets the password of this Register.
-
-
-        :return: The password of this Register.
-        :rtype: str
-        """
-        return self._password
-
-    @password.setter
-    def password(self, password: str):
-        """Sets the password of this Register.
-
-
-        :param password: The password of this Register.
-        :type password: str
-        """
-        if password is None:
-            raise ValueError("Invalid value for `password`, must not be `None`")  # noqa: E501
-
-        self._password = password
-
-    @property
-    def name(self) -> str:
-        """Gets the name of this Register.
-
-
-        :return: The name of this Register.
-        :rtype: str
-        """
-        return self._name
-
-    @name.setter
-    def name(self, name: str):
-        """Sets the name of this Register.
-
-
-        :param name: The name of this Register.
-        :type name: str
-        """
-        if name is None:
-            raise ValueError("Invalid value for `name`, must not be `None`")  # noqa: E501
-
-        self._name = name
-
-    @property
-    def role(self) -> str:
-        """Gets the role of this Register.
-
-
-        :return: The role of this Register.
-        :rtype: str
-        """
-        return self._role
-
-    @role.setter
-    def role(self, role: str):
-        """Sets the role of this Register.
-
-
-        :param role: The role of this Register.
-        :type role: str
-        """
-
-        self._role = role
